# kka-resources

./: .gitignore  LICENSE  README.md  chatbot_application.ipynb  notebook_experiments.ipynb  opencode.json  pyproject.toml  test_api.ipynb
app/: 01_simple_chatbot.ipynb  02_story_generator.ipynb  03_code_explainer.ipynb  04_math_tutor.ipynb  05_language_translator.ipynb  06_quiz_generator.ipynb  07_animal_guessing_game.ipynb
assets/: .gitkeep  README.md
backend/: .env.example  Dockerfile  README.md  deploy.ps1  logger.py  main.py  middleware.py  models.py  requirements.txt
backend/prompts/: prompts.py
backend/routers/: chat.py
backend/tools/: base.py  search.py
docs/: INSPIRATION.md  teacher_guide.md  troubleshooting.md
experiments/: README.md  streaming_response.py  test_api.ipynb
frontend/: .dockerignore  .env.example  .env.local  .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/contributions/: page.tsx
frontend/src/app/theory/: page.tsx
frontend/src/app/theory/ai-bias/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/app/tools/chatbot/: page.tsx
frontend/src/components/: Breadcrumbs.tsx  ChatInterface.tsx  Footer.tsx  GlassDonut.tsx  Icons.tsx  MarkdownRenderer.tsx  Navigation.tsx  PageWrapper.tsx  Sidebar.tsx  TheoryCard.tsx  ToolCard.tsx
frontend/src/data/: theories.tsx  tools.tsx
frontend/src/lib/: api.ts
notebooks/: 02_story_generator.ipynb  04_math_tutor.ipynb  05_language_translator.ipynb
utils/: preprocess_document.py  references.txt  vdb_ingestion.py
(+14 files in other folders)
