[project]
name = "koding-dan-kecerdasan-artificial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "compressed-tensors>=0.12.2",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "huggingface-hub[hf-xet]>=0.34.4",
    "ipykernel>=6.30.1",
    "llama-cpp-python>=0.3.16",
    "pydantic-ai>=1.17.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
